# opencv-lab

./: CMakeLists.txt  README.md  main.cpp
